Remove ENV and built custom JRE